--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
   </nav>
 
-  <main class="container mt-5">
+  <main class="container my-5">
     <section class="card">
       <div class="card-header card-title text-center fw-semibold">
         Crear tabla
@@ -110,7 +110,7 @@
 
         <div class="row mb-3">
           <div class="container-fluid">
-            <div class="d-flex justify-content-between align-items-center mb-2">
+            <div class="d-flex justify-content-between align-items-center mb-4">
               <h5 class="mb-0">Campos</h5>
               <button type="button" class="btn btn-primary" id="addFieldBtn" data-bs-toggle="modal"
                 data-bs-target="#fieldCreationModal">
@@ -191,27 +191,27 @@
                     Configuración del campo
                   </div>
                   <div class="card-body row m-2 mb-4">
-                    <div class="mb-3 col-4 form-check form-switch">
+                    <div class="mb-3 col col-sm-6 col-lg-4 form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="fieldIsRequired">
                       <label class="form-check-label" for="fieldIsRequired">Obligatorio</label>
                     </div>
-                    <div class="mb-3 col-4 form-check form-switch">
+                    <div class="mb-3 col col-sm-6 col-lg-4 form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="fieldIsVisible" checked>
                       <label class="form-check-label" for="fieldIsVisible">Visible</label>
                     </div>
-                    <div class="mb-3 col-4 form-check form-switch">
+                    <div class="mb-3 col col-sm-6 col-lg-4 form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="fieldIsEditable" checked>
                       <label class="form-check-label" for="fieldIsEditable">Editable</label>
                     </div>
-                    <div class="mb-3 col-4 form-check form-switch">
+                    <div class="mb-3 col col-sm-6 col-lg-4 form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="fieldIsSearchable">
                       <label class="form-check-label" for="fieldIsSearchable">Buscable</label>
                     </div>
-                    <div class="mb-3 col-4 form-check form-switch">
+                    <div class="mb-3 col col-sm-6 col-lg-4 form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="fieldIsAdminOnly">
                       <label class="form-check-label" for="fieldIsAdminOnly">Solo admin</label>
                     </div>
-                    <div class="mb-3 col-4 form-check form-switch">
+                    <div class="mb-3 col col-sm-6 col-lg-4 form-check form-switch">
                       <input class="form-check-input" type="checkbox" id="fieldIsEnabled" checked>
                       <label class="form-check-label" for="fieldIsEnabled">Habilitado</label>
                     </div>
