--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     integrity="sha384-PxUH+evkeR+yNjPWfGeMd+MJ9jpFOzJcOsH9V9z5n36KQ2J8ztqdw4GmyRI18se6"
     crossorigin="anonymous"></script>
 
+  <!-- CryptoJS -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
