--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <form id="tableCreation" class="p-4">
+            <form id="tableCreationForm" class="p-4">
               <div class="row mb-3">
                 <div class="col">
                   <label for="tableId" class="form-label">ID de la tabla</label>
