Ajustes generales a los modales

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <!-- Modal de creación de tablas -->
     <div class="modal fade modal-xl" id="tableCreationModal" data-bs-backdrop="static" data-bs-keyboard="false"
       tabindex="-1" aria-labelledby="tableCreationModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable  modal-fullscreen">
         <div class="modal-content">
           <div class="modal-header">
             <h1 class="modal-title fs-5" id="tableCreationModalLabel">Crear tabla</h1>
