--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                             <div class="row mb-3">
                                 <div class="col">
                                     <label for="tableId" class="form-label">ID de la tabla</label>
-                                    <input type="text" class="form-control" id="tableId" placeholder="Ej. patientsMain">
+                                    <input type="text" class="form-control" id="tableId" placeholder="Ej. patientsMain" autofocus
+                                        required>
                                 </div>
                                 <div class="col">
                                     <div class="row form-check form-switch">
@@ -144,7 +145,7 @@
                                 <div class="col">
                                     <label for="tableDescriptionEs" class="form-label">Descripción (ES)</label>
                                     <input type="text" class="form-control" id="tableDescriptionEs"
-                                        placeholder="Ej. Pacientes">
+                                        placeholder="Ej. Pacientes" required>
                                 </div>
                                 <div class="col">
                                     <label for="tableDescriptionEn" class="form-label">Description (EN)</label>
@@ -200,7 +201,7 @@
                                 <div class="mb-3 col-4">
                                     <label for="fieldId" class="form-label">ID del campo</label>
                                     <input type="text" class="form-control" id="fieldId" placeholder="Ej. primerNombre"
-                                        required>
+                                        required autofocus>
                                 </div>
                                 <div class="mb-3 col-4">
                                     <label for="fieldType" class="form-label">Tipo de dato</label>
